--- a/gui/package.json
+++ b/gui/package.json
@@ -2,6 +2,10 @@
   "name": "partycloud-gui",
   "version": "0.0.1",
   "main": "main.js",
+  "scripts": {
+    "rebuild": "electron-rebuild",
+    "start": "electron"
+  },
   "devDependencies": {
     "electron": "^1.6.11",
     "electron-rebuild": "^1.5.11"
