--- a/gui/package.json
+++ b/gui/package.json
@@ -14,7 +14,7 @@
     "build-renderer": "cross-env NODE_ENV=production node ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./app/",
-    "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development",
+    "start-hot": "cross-env HOT=1 NODE_ENV=development electron ./app/main.development --gui-addr=localhost:38387",
     "postinstall": "npm run build",
     "dev": "npm run hot-server -- --start-hot",
     "package": "npm run build && build --publish never",
