--- a/gui/package.json
+++ b/gui/package.json
@@ -122,6 +122,7 @@
     "@types/react-router": "^4.0.11",
     "@types/react-router-dom": "^4.0.7",
     "@types/react-router-redux": "^5.0.2",
+    "@types/redux-form": "^7.0.5",
     "@types/redux-logger": "^3.0.0",
     "@types/sinon": "^2.3.1",
     "asar": "^0.13.0",
@@ -135,6 +136,7 @@
     "electron-builder": "^19.8.0",
     "electron-builder-http": "^19.15.0",
     "electron-devtools-installer": "^2.0.1",
+    "electron-packager": "^9.0.1",
     "electron-rebuild": "^1.6.0",
     "enzyme": "^2.9.1",
     "express": "^4.14.0",
@@ -179,6 +181,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
+    "redux-form": "^7.0.4",
     "redux-thunk": "^2.1.0",
     "source-map-support": "^0.4.6"
   },
