--- a/gui/package.json
+++ b/gui/package.json
@@ -173,16 +173,13 @@
     "grpc": "^1.6.0",
     "grpc-web-client": "^0.3.0",
     "history": "^4.6.1",
+    "mobx-react": "^4.2.2",
+    "mobx-react-devtools": "^4.2.15",
     "protobufjs": "^6.8.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "react-router-redux": "^5.0.0-alpha.6",
-    "redux": "^3.6.0",
-    "redux-form": "^7.0.4",
-    "redux-thunk": "^2.1.0",
     "source-map-support": "^0.4.6"
   },
   "devEngines": {
